--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
                 <div>
                     <!-----Cards-->
                     <div>
-                        <img src="" alt="">
+                        <img src="img/Jollof-rice-16.jpg" alt="">
                         <div>
                             <span>Recipe Name</span>
                             <span>Recipe Description</span>
