--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="text-gray-600">
     
     <div>
         <div>
@@ -17,7 +17,7 @@
                     </h1>
                 </div> 
                 <ul>
-                    <li>
+                    <li class="text-gray-700">
                         <a href="#">
                             <span>Home</span>
                         </a>
@@ -76,4 +76,5 @@
     </div>
 
 </body>
+<script src="https://cdn.tailwindcss.com"></script>
 </html>
