--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
         <div>
             <nav>
                 <div>
-                    <h1>
+                    <h1 class="font-bold uppercase">
                         <a href="#">Food Recipes</a>
                     </h1>
                 </div> 
                 <ul>
-                    <li class="text-gray-700">
+                    <li class="text-gray-700 font-bold">
                         <a href="#">
                             <span>Home</span>
                         </a>
@@ -43,12 +43,12 @@
             </div>
 
             <header>
-                <h2>Recipes</h2>
-                <p>Find the best recipes for your favorite dishes</p>
+                <h2 class="text-gray-700 text-6xl font-semibold">Recipes</h2>
+                <p class="text-2xl font-semibold">Find the best recipes for your favorite dishes</p>
             </header>
 
             <div>
-                <h4>Latest Recipes</h4>
+                <h4 class="font-bold">Latest Recipes</h4>
 
                 <div>
                     <!-----Cards-->
@@ -62,7 +62,7 @@
                     </div>
                 </div>
 
-                <h4>Most Popular</h4>
+                <h4 class="font-bold">Most Popular</h4>
                 <div>
                     <!-----Cards-->
                 </div>
