--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <div>
             <nav>
                 <div>
-                    <h1 class="font-bold uppercase">
+                    <h1 class="font-bold uppercase p-4">
                         <a href="#">Food Recipes</a>
                     </h1>
                 </div> 
@@ -36,7 +36,7 @@
             </nav>
         </div>
 
-        <main>
+        <main class="px-16">
             <div>
                 <a href="#">Login</a>
                 <a href="#">Sign Up</a>
