--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="text-gray-600 font-poppins">
+<body class="text-gray-600 poppins">
     
     <div>
         <div>
