--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,10 @@
         </div>
 
         <main class="px-16 py-6">
-            <div>
+            <div class="flex justify-around">
                 <a href="#">Login</a>
                 <a href="#">Sign Up</a>
+                
             </div>
 
             <header>
