--- a/public/index.html
+++ b/public/index.html
@@ -36,10 +36,10 @@
             </nav>
         </div>
 
-        <main class="px-16 py-6">
-            <div class="flex justify-around">
+        <main class="px-16 py-6 bg-gray-100">
+            <div class="flex justify-center md:justify-end  text-red-400">
                 <a href="#">Login</a>
-                <a href="#">Sign Up</a>
+                <a href="#" class="ml-2">Sign Up</a>
                 
             </div>
 
@@ -53,8 +53,8 @@
 
                 <div class="mt-8">
                     <!-----Cards-->
-                    <div>
-                        <img src="img/Jollof-rice-16.jpg" alt="">
+                    <div class="bg-white rounded overflow-hidden shadow-md">
+                        <img src="img/Jollof-rice-16.jpg" alt="" >
                         <div>
                             <span>Recipe Name</span>
                             <span>Recipe Description</span>
@@ -63,13 +63,13 @@
                     </div>
                 </div>
 
-                <h4 class="font-bold mt-12 pb-2">Most Popular</h4>
+                <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Most Popular</h4>
                 <div class="mt-8">
                     <!-----Cards-->
                 </div>
 
-                <div>
-                    <div>Load More</div>
+                <div class="flex justify-center">
+                    <div class="text-secondary-700">Load More</div>
                 </div>
             </div>
 
