--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,30 @@
             <div>
                 <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Recipes</h4>
 
-                <div class="mt-8">
+                <div class="mt-8 grid md:grid-cols-3 gap-10 ">
                     <!-----Cards-->
+                    <div class="bg-white rounded overflow-hidden shadow-md relative">
+                        <img src="img/Jollof-rice-16.jpg" alt=""  class="w-full h-32 sm:h-42 object-cover">
+                        <div class="m-4">
+                            <span class="font-bold">Recipe Name</span>
+                            <span class="block text-gray-500 text-sm">Recipe Description</span>
+                            
+                        </div>
+                        <div class="bg-red-400 text-gray-300 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2">
+                            <span>25 mins</span>
+                        </div>
+                    </div>
+                    <div class="bg-white rounded overflow-hidden shadow-md relative">
+                        <img src="img/Jollof-rice-16.jpg" alt=""  class="w-full h-32 sm:h-42 object-cover">
+                        <div class="m-4">
+                            <span class="font-bold">Recipe Name</span>
+                            <span class="block text-gray-500 text-sm">Recipe Description</span>
+                            
+                        </div>
+                        <div class="bg-red-400 text-gray-300 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2">
+                            <span>25 mins</span>
+                        </div>
+                    </div>
                     <div class="bg-white rounded overflow-hidden shadow-md relative">
                         <img src="img/Jollof-rice-16.jpg" alt=""  class="w-full h-32 sm:h-42 object-cover">
                         <div class="m-4">
